Update Prediction on Hospital Readmission.ipynb

--- a/2. Diabtetes-Patients-Hospital-Readmission/Prediction on Hospital Readmission.ipynb
+++ b/2. Diabtetes-Patients-Hospital-Readmission/Prediction on Hospital Readmission.ipynb
@@ -5038,7 +5038,7 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=0)\n",
     "\n",
-    "logit = LogisticRegression(fit_intercept=True, penalty='l1')\n",
+    "logit = LogisticRegression(fit_intercept=True, penalty='l1', solver='saga')\n",
     "\n",
     "logit.fit(X_train, y_train)\n"
    ]
